@@ -172,9 +172,6 @@ stream_export void close_stream(stream *s);
 
 stream_export stream *open_urlstream(const char *url);
 
-stream_export stream *udp_rastream(const char *hostname, int port, const char *name);
-stream_export stream *udp_wastream(const char *hostname, int port, const char *name);
-
 stream_export stream *file_rstream(FILE *fp, const char *name);
 stream_export stream *file_wstream(FILE *fp, const char *name);
 stream_export stream *file_rastream(FILE *fp, const char *name);
